Changes IN Index

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anshphirani.me",
+  "homepage": "https://virensoni-portfolio.vercel.app",
   "name": "vs-code-portfolio",
   "version": "0.1.0",
   "private": true,
